# CarND-Path-Planning-Project

./: CMakeLists.txt  README.md  derivation-acceleration-to-avoid-crash-from-behind.org  design-workbook.md  design-workbook.org  maximum-acceleration-permitted-before-collision-with-car-in-front.org  study-other-example.org  utils.org
src/: data_model.h  kinematics.h  main.cpp  maneuvers.h  parameters.h  trajectory.h  utils.h
